Commit-3 added quicksand fonts to main index file

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -6,7 +6,8 @@
 }
 
 html {
-  font-family: "Nunito Sans", sans-serif;
+  /* font-family: "Nunito Sans", sans-serif;*/
+  font-family: "Quicksand", sans-serif;
   color: white;
 }
 
